--- a/app/views/users/account/base.scala.html
+++ b/app/views/users/account/base.scala.html
@@ -91,7 +91,7 @@ user
     var brithday = '@baseForm("year").value';
 
     seajs.use("app/init",function(init){
-        init.load("app/user/user.setting");
+        init.load("app/user/user.baseSetting");
     });
 </script>
 }
