--- a/app/views/users/account/passwd.scala.html
+++ b/app/views/users/account/passwd.scala.html
@@ -17,7 +17,7 @@ user
                  <!--side nav end-->
                  <div class="main-content">
                      @if(msg !=""){
-                     <div class="error-row" style="display:block"><p>@msg !</p></div>
+                     <div class="error-row" style="display:block"><p class="ok">@msg !</p></div>
                      }
 
                      <div class="set-password">
