--- a/app/views/users/commission/myShiDou.scala.html
+++ b/app/views/users/commission/myShiDou.scala.html
@@ -14,88 +14,14 @@ user
             </ul>
         </div>
         <div class="main-content">
-            <div class="bind">
-                <ul class="bind-list clearfix">
-                    <li>
-                        <div class="bind-icon bind-sina"></div>
-                        <div class="text" id="J_bindSina">
-                            <span class="bname">新浪微博</span>
 
-                            <div class="mt10 gc6">
-                                已绑定帐号：
-                                <span>食美特</span>[
-                                <a class="relieve" data-snsname="1283431903" data-snstype="sina" href="javascript:;">解除绑定</a>]
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="bind-icon bind-qq"></div>
-                        <div class="text">
-                            <span class="bname">QQ</span>
-
-                            <div class="mt10 gc6">
-                                已绑定帐号：
-                                <span>smeite</span>[
-                                <a class="relieve" data-snsname="DE9267EE1F2B5B29909E1DB27F9DE4F8" data-snstype="qzone"
-                                   href="javascript:;">解除绑定</a>]
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="bind-icon bind-taobao"></div>
-                        <div class="text">
-                            <span class="bname">淘宝网</span>
-
-                            <div class="mt10 gc6">
-                                <a href="">绑定帐号</a>
-                                和好友分享你的发现。
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="bind-icon bind-tencent"></div>
-                        <div class="text" id="J_bindTencent">
-                            <span class="bname">腾讯微博</span>
-
-                            <div class="mt10 gc6">
-                                <a href="">绑定帐号</a>
-                                和好友分享你的发现。
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="bind-icon bind-douban"></div>
-                        <div class="text">
-                            <span class="bname">豆瓣</span>
-
-                            <div class="mt10 gc6">
-                                <a href="">绑定帐号</a>
-                                和好友分享你的发现。
-                            </div>
-                        </div>
-                    </li>
-                    <!--<li>
-                        <div class="bind-icon bind-renren"></div>
-                        <div class="text" id="J_bindRenren">
-                            <span class="bname gc6">人人网</span>
-                            <div class="mt10">
-                                                                            <a href="/account/snsLogin?snsType=renren">绑定帐号</a>
-                                    和好友分享你的发现。
-                                                                    </div>
-                        </div>
-                    </li>-->
-                    <li>
-                        <div class="bind-icon bind-alipay"></div>
-                        <div class="text">
-                            <span class="bname">支付宝</span>
-
-                            <div class="mt10 gc6">
-                                <a href="">绑定帐号</a>
-                                和好友分享你的发现。
-                                <p class="mt5">绑定后可随机领取1-1000个集分宝</p>
-                            </div>
-                        </div>
-                    </li>
+            <div class="help">
+                <div class="help-title">帮助</div>
+                <ul>
+                    <li><a href="/account/tbkhelp#help1" target="_blank">了解游戏规则</a></li>
+                    <li> <a href="/account/tbkhelp#help2" target="_blank">什么是淘宝客？如何注册</a> </li>
+                    <li><a href="/account/tbkhelp#help3" target="_blank">如何获得更高的收益？</a></li>
+                    <li><a href="/account/tbkhelp#help4" target="_blank">收益如何提现？</a></li>
                 </ul>
             </div>
         </div>
@@ -105,7 +31,7 @@ user
 }{
 <script type="text/javascript">
     seajs.use("app/init",function(init){
-        init.load("app/user/user.bindAccount");
+
     });
 </script>
 }
