--- a/public/assets/css/template/user.setting.css
+++ b/public/assets/css/template/user.setting.css
@@ -418,27 +418,113 @@
 .invite {
     overflow: hidden;
     zoom: 1;
-    padding-left: 50px
+    padding-left:20px
+}
+.invite .li {
+    font-size: 16px;
+    display: block;
+    margin-bottom:5px;
+    height:30px;
+    line-height:30px;
+    font-weight: bold;
+}
+.invite-intro, .invite-link, .invite-share, .invite-record{
+    margin-bottom: 20px;
+}
+.invite-intro{
+   background-color: #FDF6EA;
 }
 
-.invite .li {
-    display: block;
-    margin-bottom: 15px;
-    height: 32px;
-    line-height: 32px;
+.invite-intro li{
+    padding-left: 15px;
+     height: 30px;
+    line-height: 30px;
+}
+.invite-intro .alert{
+    background: url(images/alert.png) no-repeat 0 0 transparent;
+    padding-left: 20px;
+}
+
+.invite .invite-link{
+    height: 65px;
+    line-height: 65px;
+}
+.invite-link .invite_txa {
+    width: 570px;
+    float: left;
+    height: 50px;
+    line-height: 23px;
+    margin-bottom: 20px;
+    color: #999;
+}
+.invite-link .bbl-btn{
+    margin-top: 15px;
+    margin-left: 20px;
+    float: left;
+}
+.invite-link .bbl-btn.hover {
+    color: #fff;
+    background-position: -5px -411px;
+    text-decoration: none;
+    border: 1px solid #1c82bf
+}
+
+.invite-link .bbl-btn.active {
+    color: #fff;
+    background-position: -5px -461px;
+    text-decoration: none;
+    border: 1px solid #1c82bf
+}
+
+.invite-share .share-tip{
+    height: 30px;
+    margin-top: 5px;
+    background: url(images/correct.png) no-repeat 0 0 transparent;
+    padding-left: 20px;
+    color: #F60;
+    font-size: 14px;
     font-weight: bold;
 }
 
-.invite .li li {
+.invite-share  li {
     height: 32px;
     line-height: 32px;
     margin: 0 20px 0 0;
     width: auto;
     float: left
 }
+.invite-share li a {
+    color: #666;
+    padding-left: 20px;
+    display: block;
+}
+.invite-share .i-sina, .invite-share .i-qq, .invite-share .i-renren, .invite-share .i-douban, .invite-share .i-qzone {
+    background-image: url(images/icons-share.png);
+    background-repeat: no-repeat
+}
 
-.invite .invite_success {
-    width: 300px;
+.invite-share .i-sina {
+    background-position: 0 -410px
+}
+
+.invite-share .i-qq {
+    background-position: 0 -273px
+}
+
+.invite-share .i-renren {
+    background-position: 0 -73px
+}
+
+.invite-share .i-douban {
+    background-position: 0 -113px
+}
+
+.invite-share .i-qzone {
+    background-position: 0 -364px
+}
+
+
+.invite-record .invite_success {
     background: #fdf6ea;
     padding: 0 0 0 20px;
     display: block;
@@ -448,87 +534,51 @@
     color: #333
 }
 
-.invite .invite_success span {
+.invite-record .invite_success span {
     font-size: 14px;
     padding: 0 5px;
     color: #f32a6b;
     font-weight: 700;
     font-family: Georgia, "Times New Roman", Times, serif
 }
+table {
+    max-width: 100%;
+    background-color: transparent;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
 
-.invite .invite_txa {
-    width: 370px;
-    height: 50px;
-    line-height: 23px;
+.table {
+    width: 100%;
     margin-bottom: 20px;
-    color: #999
+    border: 1px solid #dddddd;
+    border-collapse: separate;
+    *border-collapse: collapse;
+    border-left: 0;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+
 }
 
-.invite .invite_txb {
-    width: 526px;
-    height: 92px;
-    line-height: 23px;
-    margin-bottom: 10px;
-    color: #999;
-    margin-top: 10px
+.table th,
+.table td {
+    padding: 8px;
+    line-height: 20px;
+    text-align: left;
+    vertical-align: top;
+    border-top: 1px solid #dddddd;
+    border-left: 1px solid #dddddd;
 }
 
-.invite li {
-    line-height: 32px;
-    float: left;
-    padding: 0 20px 0 0
+.table th {
+    font-weight: bold;
 }
 
-.invite li a {
-    color: #666;
-    padding-left: 20px;
-    display: block
+.table thead th {
+    text-align: center;
+    vertical-align: bottom;
 }
-
-.invite li a:hover {
-    color: #5ad;
-    text-decoration: underline
-}
-
-.invite .i-sina, .invite .i-qq, .invite .i-renren, .invite .i-douban, .invite .i-qzone {
-    background-image: url(images/icons-share.png);
-    background-repeat: no-repeat
-}
-
-.invite .i-sina {
-    background-position: 0 -410px
-}
-
-.invite .i-qq {
-    background-position: 0 -273px
-}
-
-.invite .i-renren {
-    background-position: 0 -73px
-}
-
-.invite .i-douban {
-    background-position: 0 -113px
-}
-
-.invite .i-qzone {
-    background-position: 0 -364px
-}
-
-.bbl-btn.hover {
-    color: #fff;
-    background-position: -5px -411px;
-    text-decoration: none;
-    border: 1px solid #1c82bf
-}
-
-.bbl-btn.active {
-    color: #fff;
-    background-position: -5px -461px;
-    text-decoration: none;
-    border: 1px solid #1c82bf
-}
-
 
 /* 我的收货地址*/
 
