fix some bugs for regist with inviter

--- a/app/views/users/regLogin/regist.scala.html
+++ b/app/views/users/regLogin/regist.scala.html
@@ -34,7 +34,7 @@ title =  "食美特，爱美食爱生活——用户注册"
 
 
                     <div class="field-box pt25 pl20">
-                        <form id="regForm" class="validateForm" method="post" action="/user/doRegist">
+                        <form id="J_regLoginForm" class="validateForm" method="post" action="/user/doRegist">
                           <input type="hidden" name="inviteId" value="@i">
                             @form.globalError.map { error =>
                             <div class="error-row" style="display:block">
