--- a/app/views/users/regLogin/resetPasswd.scala.html
+++ b/app/views/users/regLogin/resetPasswd.scala.html
@@ -11,7 +11,7 @@ title =  "食美特，爱美食爱生活——找回密码"
                 <h2>重置密码</h2>
                 <div class="set-password">
 
-                    <form action="/user/resetPasswd" id="J_PwdEmail" class="set-form" method="post">
+                    <form action="/user/resetPasswd" id="J_regLoginForm" class="set-form" method="post">
 
                         <div class="form-row clearfix">
                             <label style="width:110px;">填写你的Email：</label>
