--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -465,9 +465,9 @@ nav="index"
 
         <div class="field-box" id="J_welcome" style="position: relative;">
             <div class="clearfix thirdLogin" >
-                <a class="l-qq" href='@controllers.users.routes.UsersSnsLogin.snsLogin("qzone","syn")' target="_blank">QQ帐号登录</a>
-                <a class="l-sina" href='@controllers.users.routes.UsersSnsLogin.snsLogin("sina","syn")' target="_blank">新浪微博登录</a>
-                <a class="l-tao" href='@controllers.users.routes.UsersSnsLogin.snsLogin("taobao","syn")' target="_blank">淘宝帐号登录</a>
+                <a class="l-qq" href='@controllers.users.routes.UsersSnsLogin.snsLogin("qzone","syn",0)' target="_blank">QQ帐号登录</a>
+                <a class="l-sina" href='@controllers.users.routes.UsersSnsLogin.snsLogin("sina","syn",0)' target="_blank">新浪微博登录</a>
+                <a class="l-tao" href='@controllers.users.routes.UsersSnsLogin.snsLogin("taobao","syn",0)' target="_blank">淘宝帐号登录</a>
             </div>
             <div class="clearfix gc login">
                 <a id="J_login" href="/user/login">帐号登录</a>&nbsp;|&nbsp;<a href="/user/regist">免费注册</a>
