--- a/app/views/users/regLogin/regist.scala.html
+++ b/app/views/users/regLogin/regist.scala.html
@@ -1,4 +1,4 @@
-@(form: Form[(String,String,Long)],i:Long)
+@(form: Form[(String,String,Long)],i:Long=0)
 @views.html.template(
 title =  "食美特，爱美食爱生活——用户注册"
 )(css="/assets/css/template/user.regLogin.css") {
@@ -14,7 +14,7 @@ title =  "食美特，爱美食爱生活——用户注册"
                     </legend>
                     <div class="field-box">
                         <div class="sns-login pt20 clearfix">
-                            <a class="l-qq" href='@controllers.users.routes.UsersSnsLogin.snsLogin("qq","syn",i)' target="_blank">QQ帐号登录</a>
+                            <a class="l-qq" href='@controllers.users.routes.UsersSnsLogin.snsLogin("qzone","syn",i)' target="_blank">QQ帐号登录</a>
                             <a class="l-sina" href='@controllers.users.routes.UsersSnsLogin.snsLogin("sina","syn",i)' target="_blank">新浪微博登录</a>
                             <a class="l-tao" href='@controllers.users.routes.UsersSnsLogin.snsLogin("taobao","syn",i)' target="_blank">淘宝帐号登录</a>
                         </div>
