--- a/app/views/users/regLogin/regist.scala.html
+++ b/app/views/users/regLogin/regist.scala.html
@@ -43,11 +43,11 @@ title =  "食美特，爱美食爱生活——用户注册"
                             }
                             <div class="form-row">
                                 <label>Email：</label>
-                                <input type="email" class="base-input" name="email" id="email" value="" requried="required" >
+                                <input type="email" class="base-input" name="email" id="J_checkEmail" value="" >
                             </div>
                             <div class="form-row">
                                 <label>密码：</label>
-                                <input type="password" class="base-input" name="password" id="passwd" value="" required="required">
+                                <input type="password" class="base-input" name="password" id="password" value="">
                             </div>
 
                             <div class="form-row  clearfix">
