adjust invite pages and add actions

--- a/app/views/users/account/payment.scala.html
+++ b/app/views/users/account/payment.scala.html
@@ -29,12 +29,12 @@ user
                                  }
 
                                  <div class="form-row">
-                                     <label>支付宝账号：</label>
+                                     <label><span class="rc">*</span>支付宝账号：</label>
                                      <input type="text" class="base-input" name="alipay" id="alipay" value='@alipayForm("alipay").value'>
                                    <!--  <span class="ml10 yc">请确保支付宝账号的正确性，否则无法成功返利</span>-->
                                  </div>
                                  <div class="form-row">
-                                     <label>手机号：</label>
+                                     <label><span class="rc">*</span>手机号：</label>
                                      <input type="text" class="base-input" name="phone" id="phone" value='@alipayForm("phone").value'>
                                  <!--    <span class="ml10 yc">请确保手机号的正确性，否则返利成功后，无法提醒您</span>-->
                                  </div>
