--- a/app/views/users/commission/myAward.scala.html
+++ b/app/views/users/commission/myAward.scala.html
@@ -10,7 +10,7 @@ user
                          <li> <a  href="@controllers.users.routes.UsersCommission.myCredits">我的集分宝</a> </li>
                          <li> <a  href="@controllers.users.routes.UsersCommission.myShiDou">我的食豆</a>  </li>
                          <li> <a class="on" href="@controllers.users.routes.UsersCommission.myAward">我的奖品</a>  </li>
-                         <li> <a href="@controllers.users.routes.UsersCommission.invite">邀请有奖</a> </li>
+                         <li> <a href="@controllers.users.routes.UsersCommission.invite(1)">邀请有奖</a> </li>
                      </ul>
                  </div>
                  <!--side nav end-->
