--- a/app/views/users/account/address.scala.html
+++ b/app/views/users/account/address.scala.html
@@ -46,7 +46,7 @@ user
                                  <label>邮编：</label>
                                  <input type="text" class="base-input" name="postcode" id="zipcode" value='@addrForm("postcode").value'>
                              </div>
-                             <div class="form-row">
+                             <!--<div class="form-row">
                                  <label><span class="rc">*</span>手机：</label>
                                  <input type="text" class="base-input" name="cellphone" id="mobilephone" value='@addrForm("cellphone").value'>
                                  @if(!addrForm.error("cellphone").isEmpty){<span class="error">@addrForm.error("cellphone").get.message</span> }
@@ -55,7 +55,7 @@ user
                                  <label></span>支付宝：</label>
                                  <input type="text" class="base-input" name="alipay" id="alipayaccount" value='@addrForm("alipay").value'>
                                  @if(!addrForm.error("alipay").isEmpty){<span class="error">@addrForm.error("alipay").get.message</span> }
-                             </div>
+                             </div>-->
                              <div class="form-row">
                                  <label>&nbsp;</label>
                                  <input type="submit" class="bbl-btn submit" value="保存"><a class="ml10 mt5 fl" href="@controllers.users.routes.UsersCommission.myAward">去看我的奖品</a>
