--- a/public/assets/css/template/user.setting.css
+++ b/public/assets/css/template/user.setting.css
@@ -432,7 +432,7 @@
     margin-bottom: 20px;
 }
 .invite-intro{
-   background-color: #FDF6EA;
+   background-color: #F9F9EF;
 }
 
 .invite-intro li{
