--- a/app/views/users/commission/myCredits.scala.html
+++ b/app/views/users/commission/myCredits.scala.html
@@ -21,10 +21,11 @@ user
             <div class="help">
                 <div class="help-title">帮助</div>
                 <ul>
-                    <li><a href="/account/tbkhelp#help1" target="_blank">了解游戏规则</a></li>
-                    <li> <a href="/account/tbkhelp#help2" target="_blank">什么是淘宝客？如何注册</a> </li>
-                    <li><a href="/account/tbkhelp#help3" target="_blank">如何获得更高的收益？</a></li>
-                    <li><a href="/account/tbkhelp#help4" target="_blank">收益如何提现？</a></li>
+                    <li><a href="/account/tbkhelp#help4" target="_blank">了解什么是购物返现？</a></li>
+                    <li><a href="/account/tbkhelp#help1" target="_blank">了解什么是集分宝</a></li>
+                    <li> <a href="/account/tbkhelp#help2" target="_blank">了解什么是食豆</a> </li>
+                    <li><a href="/account/tbkhelp#help3" target="_blank">了解什么是邀请有奖</a></li>
+
                 </ul>
             </div>
         </div>
